# agent-toolcalling-autogen

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: local_config.yaml  production_config.yaml
src/: run.py
src/api/: app.py
src/core/: config.py  embeddings.py  memory.py
src/core/agents/: base_agent.py  confluence_agent.py  databricks_agent.py  graphql_agent.py  langgraph_agent.py  langgraph_workflow.py  supervisor_agent.py
